--- a/styles/index.css
+++ b/styles/index.css
@@ -92,7 +92,7 @@ body{
 
 /* About Section */
 .about-section{
-    max-width: 1140px;
+    max-width: 80%;
     margin: 60px auto;
     background-color: rgb(255, 248, 243);
     display: flex;
@@ -121,3 +121,41 @@ body{
 }
 
 /* What I Do */
+.what-i-do{
+    max-width: 80%;
+    margin: 100px auto;
+}
+.what-i-do-desc{
+    text-align: center;
+    padding: 0 200px;
+}
+.what-i-do-desc h1{
+    font-size: 35px;
+    color: rgb(24, 24, 24);
+    margin-bottom: 25px;
+}
+.what-i-do-desc p{
+    color: rgb(117, 117, 117);
+    font-size: 16px;
+}
+
+/* Cards */
+.cards-container{
+    margin: 50px 0;
+    display: flex;
+    gap: 20px;
+}
+.card{
+    max-width: 250px;
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    background: rgb(255, 255, 255);
+}
+.card h2{
+    margin: 30px 0 25px;
+    color: rgb(24, 24, 24);
+}
+.card p{
+    color: rgb(117, 117, 117);
+}
