--- a/styles/index.css
+++ b/styles/index.css
@@ -159,3 +159,50 @@ body{
 .card p{
     color: rgb(117, 117, 117);
 }
+
+/* Resume section */
+.resume-section{
+    max-width: 80%;
+    margin: 80px auto;
+
+}
+.resume-section h1{
+    text-align: center;
+    margin-bottom: 50px;
+}
+.resume-section h1, .resume-section h2, .resume-section h3{
+    color: rgb(71, 71, 71);
+}
+.resume-section h3{
+    margin-top: 30px;
+}
+.resume-section h4{
+    margin-bottom: 25px;
+}
+.resume-section h4, .resume-section p{
+    color: rgb(117, 117, 117);
+}
+.experiences-container{
+    display: flex;
+    gap: 50px;
+}
+
+.column1 div, .column2 div{
+    margin-bottom: 30px;
+}
+.experiences-container hr{
+    color: rgb(117, 117, 117);
+}
+.cv-download-div{
+    text-align: center;
+    margin-top: 35px;
+}
+
+/* Footer */
+footer{
+    background:rgb(255, 248, 243);;
+}
+.footer-container{
+    max-width: 80%;
+    margin: 80px auto;
+}
